--- a/result.html
+++ b/result.html
@@ -13,6 +13,7 @@
 </header>
 <table id="data" class="table table-striped">
 </table>
+<div id="charts"></div>
 
 <script type='text/javascript' src="scripts/lib/lodash/lodash.js"></script>
 <script type='text/javascript' src="scripts/lib/d3/d3.js"></script>
